Додали секцію з робочим процесом

--- a/index.html
+++ b/index.html
@@ -56,5 +56,15 @@
 
     </section>
 
+    <section>
+        <h2>Чим ми займаємося</h2>
+
+        <ul lang="en">
+            <li><a href=""><img src=".//Imeges/keyboard.jpg" alt="Hands on the keyboard"></a></li>
+            <li><a href=""><img src="./Imeges/phone.jpg" alt="Phone in left hand"></a></li>
+            <li><a href=""><img src="./Imeges/colors.jpg" alt="Color selection in the tablet"></a></li>
+        </ul>
+    </section>
+
 </body>
 </html>
