--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         </nav>
     </header>
 
+<main>
+
     <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="submit">Замовити послугу</button>
@@ -65,6 +67,15 @@
             <li><a href=""><img src="./Imeges/colors.jpg" alt="Color selection in the tablet"></a></li>
         </ul>
     </section>
+
+    <section>
+        <h2>Наша команда</h2>
+
+        <ul>
+            <li></li>
+        </ul>
+    </section>
+</main>
 
 </body>
 </html>
