Додана секція "Наша команда"

--- a/index.html
+++ b/index.html
@@ -78,7 +78,26 @@
         <h2>Наша команда</h2>
 
         <ul>
-            <li></li>
+            <li>
+                <img src="./Imeges/ihor_demianenko.jpg" alt="the man 30 ears old" width="145" height="31">
+                <h3>Ігор Дем'яненко</h3>
+                <p>Product Designer</p>
+            </li>
+            <li>
+                <img src="./Imeges/olha_repina.jpg" alt="blonde in glasses" width="145" height="31">
+                <h3>Ольга Рєпіна</h3>
+                <p>Frontend Developer</p>
+            </li>
+            <li>
+                <img src="./Imeges/mykola_tarasov.jpg" alt="the guy in the blue shirt" width="145" height="31">
+                <h3>Микола Тарасов</h3>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./Imeges/mykhailo_ermakov.jpg" alt="a man in a black T-shirt on the street" width="145" height="31">
+                <h3>Михайло Єрмаков</h3>
+                <p>UI Designer</p>
+            </li>
         </ul>
     </section>
 </main>
