--- a/index.html
+++ b/index.html
@@ -102,5 +102,20 @@
     </section>
 </main>
 
+<footer>
+    <a
+        href="file:///C:/Users/Fedya/Desktop/%D0%9C%D0%BE%D1%97%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%B8/hw/goit-markup-hw-01/index.html"><span
+            class="accent">Web</span>Studio
+
+    </a>
+    <address>
+        м. Київ, пр-т Лесі Українки, 26<br>
+
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
+        <a href="tel:+380961111111">+380961111111</a>
+
+    </address>
+</footer>
+
 </body>
 </html>
