Посилання на емблемі
Змінив посилання на емблемі. Спочатку було посне посилання, а потім змінив на "/"

--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 <body>
     <header>
         <nav>
-            <a
-                href="file:///C:/Users/Fedya/Desktop/%D0%9C%D0%BE%D1%97%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%B8/hw/goit-markup-hw-01/index.html"><span class="accent">Web</span>Studio
-            
-            </a>
+            <a href="/"><span class="accent">Web</span>Studio</a>
             
             <ul>
                 <li><a href="">Студія</a></li>
@@ -103,11 +100,8 @@
 </main>
 
 <footer>
-    <a
-        href="file:///C:/Users/Fedya/Desktop/%D0%9C%D0%BE%D1%97%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%B8/hw/goit-markup-hw-01/index.html"><span
-            class="accent">Web</span>Studio
+    <a href="/"><span class="accent">Web</span>Studio</a>
 
-    </a>
     <address>
         м. Київ, пр-т Лесі Українки, 26<br>
 
