--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html"><span class="accent">Web</span>Studio</a>
+            <a href="/"><span class="accent">Web</span>Studio</a>
             
             <ul>
                 <li><a href="">Студія</a></li>
@@ -100,7 +100,7 @@
 </main>
 
 <footer>
-    <a href="./index.html"><span class="accent">Web</span>Studio</a>
+    <a href="/"><span class="accent">Web</span>Studio</a>
 
     <address>
         м. Київ, пр-т Лесі Українки, 26<br>
