--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
     <a href="./index.html"><span class="accent">Web</span>Studio</a>
 
     <address>
-        м. Київ, пр-т Лесі Українки, 26<br>
+        
+        <a href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru" target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a><br>
 
         <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
         <a href="tel:+380961111111">+380961111111</a>
